@@ -1,3 +1,8 @@
+2017-07-24  Allen D. Ball  <ball@sol>
+
+	* src/main/java/ball/http/client/method/URIBuilderFactory.java:
+	Added getInstance(URI) and getInstance(String) methods.
+
 2017-07-23  Allen D. Ball  <ball@sol>
 
 	* src/main/java/ball/http/ProtocolClientBuilder.java,
